.github/lean_quality/fixtures/research_legacy_refs/negative/legacy/final-workflow.fixture
run: Formal/AG/Research/check.sh
